--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,15 +11,20 @@
   "dependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.2.1",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.6.1",
+    "clsx": "^2.0.0",
+    "js-cookie": "^3.0.5",
     "next": "14.0.1",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
     "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
